<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0D0D">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="413dp"
        android:layout_height="235dp"
        android:layout_marginBottom="142dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378"
        app:srcCompat="@drawable/simage" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="413dp"
        android:layout_height="282dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/timage" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="449dp"
        android:layout_height="308dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView19"
        app:srcCompat="@drawable/siimage" />

    <TextView
        android:id="@+id/abouthead"
        android:layout_width="411dp"
        android:layout_height="47dp"
        android:background="#735940"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/know_about_us"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="176dp"
        android:layout_height="42dp"
        android:layout_marginBottom="230dp"
        android:background="#735940"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/our_mission"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abouthead"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="176dp"
        android:layout_height="45dp"
        android:layout_marginBottom="234dp"
        android:background="#735940"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/company_history"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="355dp"
        android:layout_height="167dp"
        android:layout_marginBottom="436dp"
        android:background="#4D735940"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abouthead"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="179dp"
        android:layout_height="169dp"
        android:layout_marginTop="4dp"
        android:text="@string/mission"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="144dp"
        android:layout_height="152dp"
        android:layout_marginBottom="16dp"
        android:text="@string/history"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>